--- a/frontend/js/dom/mutationObserver.html
+++ b/frontend/js/dom/mutationObserver.html
@@ -14,7 +14,7 @@
 
     const observer = new MutationObserver(function (mutations) {
       console.timeEnd('mutation time')
-      console.log('mutations', mutations)
+      // console.log('mutations', mutations)
     })
 
     console.log('1 observer', observer)
